--- a/senseharmony.html
+++ b/senseharmony.html
@@ -42,6 +42,11 @@
 	</head>
 
 	<body>
+		<!-- Back to top button -->
+		<button onclick="topFunction()" id="myBtn" title="Go to top"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-up" viewBox="0 0 16 16">
+			<path fill-rule="evenodd" d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5" stroke="black" stroke-width="1"/>
+		  </svg></button>
+		<!-- Back to top button -->
 		<section>
 			<div class="container-fluid project-1"
 				style="background-color: #e3dac5; font-weight: bold; color: #DA6B4C;">
@@ -91,7 +96,7 @@
 				<div class="row px-4 mx-4 project-1-para">
 					<div class="col-sm-6 my-5 text-left">
 						<span style="font-size: 35px; font-weight: 800; color: #334436;">Problem Statement
-								<hr class="mt-2 text-left" style="margin-left: 20%; width: 15%; border-top: 4px solid #DA6B4C; border-radius: 20px;">
+							<hr class="mt-2 ml-0 text-left" style="width: 13%; border-top: 4px solid #DA6B4C; border-radius: 20px;">
 						</span>
 						<p class="text-left" style="font-weight: 400; font-size: 21px; color: #212529;">
 							While tools and resources exist for children with sensory processing difficulties, there is a lack
@@ -510,6 +515,27 @@
 						reveals[i].classList.remove('active');
 					}
 				}
+			}
+		</script>
+		<script>
+			// Get the button
+			let mybutton = document.getElementById("myBtn");
+
+			// When the user scrolls down 20px from the top of the document, show the button
+			window.onscroll = function() {scrollFunction()};
+
+			function scrollFunction() {
+			  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+				mybutton.style.display = "block";
+			  } else {
+				mybutton.style.display = "none";
+			  }
+			}
+
+			// When the user clicks on the button, scroll to the top of the document
+			function topFunction() {
+			  document.body.scrollTop = 0;
+			  document.documentElement.scrollTop = 0;
 			}
 		</script>
 		<!-- Optional JavaScript -->
