Added other-works.html page
Designed other works page and added link to watercolour paintings.

--- a/fitshare.html
+++ b/fitshare.html
@@ -27,7 +27,7 @@
 						<a class="nav-link" href="/#portfolio-section">Portfolio<span class="sr-only"></span></a>
 					</li>
 					<li class="nav-item active px-2">
-						<a class="nav-link" href="#">Other Works <span class="sr-only"></span></a>
+						<a class="nav-link" href="/other-works.html">Other Works <span class="sr-only"></span></a>
 					</li>
 					<li class="nav-item active px-2">
 						<a class="nav-link" href="assets/Radhika_Joglekar_UX_Design.pdf" download>Resume<span
