Updated all files
Added favicon and logo along with "View Next Project" Sections.

--- a/other-works-pen-drawings.html
+++ b/other-works-pen-drawings.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -6,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +30,7 @@
 				<a class="nav-link" href="/#portfolio-section">Portfolio<span class="sr-only"></span></a>
 			  </li>
 			<li class="nav-item active px-2">
-				<a class="nav-link" href="/other-works.html">Other Works <span class="sr-only"></span></a>
+				<a class="nav-link" href="other-works.html">Other Works <span class="sr-only"></span></a>
 			</li>
 			<li class="nav-item active px-2">
 				<a class="nav-link" href="assets/Radhika_Joglekar_UX_Design.pdf" download>Resume<span class="sr-only"></span></a>
@@ -45,123 +48,35 @@
 		<path fill-rule="evenodd" d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5" stroke="black" stroke-width="1"/>
 	  </svg></button>
 	<!-- Back to top button -->
-	<div class="container-fluid main-hero py-3">
+	<div class="container-fluid underline" style="font-weight: bold;">
 		<div class="row">
-			<div class="col-sm-8 my-5 pl-5 hero-text">
-				<span style="font-size: 40px;">Hi! I am Radhika,</span>
-				<h1 class="hero-h1">
-					I'm <span class="auto-type"></span>
-				</h1>
-				<p class="hero-subtext">
-						I blend creative problem-solving with user-centred design to craft intuitive digital experiences.
-				</p>
-				<a href="mailto:radhikajoglekar1231@gmail.com" class="btn btn-primary btn-arrow button">
-					Contact Me
-				</a>
-			</div>
-			<div class="col-sm-4 text-left">
-				<img src="images/profile_2.png" class="w-75 img-fluid hero-image" alt="Responsive image">
-			</div>
-		  </div>
-	  </div>
-	  <section class="mx-4" id="portfolio-section">
-	  <div class="container my-5">
-		<div class="row">
-			<div class="col-12">
-				<h1 class="text-center" style="font-weight: bold;">
-					Portfolio
-				</h1>
+			<div class="col-sm-12 my-5 hero-text text-center">
+				<span style="font-size: 35px; font-weight: 800; color: #403d39;">Pen Drawings
+					<hr class="mt-2"  style="width: 10%; border-top: 4px solid #80b918; border-radius: 20px; height:0; opacity: 100; margin: auto;">
+				</span>
 			</div>
 		</div>
-	  </div>
-	  <div class="container my-5  portfolio-1 reveal">
-		<div class="row">
-			<div class="col-sm-6 px-5 py-5">
-				<h2 class="text-left pt-5" style="font-weight: bold; color: #fdfffc;">
-					SenseHarmony
-				</h2>
-				<p style="font-weight: 350; font-size: 21px; font-style: italic; color: #fdfffc;">
-					SenseHarmony is a mobile application designed to monitor and help regulate sensory perception in adults through personalised sensory diets. The project focuses on addressing the gap in research surrounding sensory regulation in the general adult population.
-				</p>
-				<!-- <span class="badge px-2 py-2 my-2 read-time">Read time: 10 mins</span>  -->
-				<span class="badge px-2 py-2 my-2 mx-2 read-time">Platform: Mobile</span>
-				<div>
-					<a href="senseharmony.html" target="_blank" class="my-3 py-2 btn btn-primary button-portfolio">
-					View Project
+	</div>
+	<div class="container-fluid my-2 underline" style="font-weight: bold;">
+		<div class="row px-4 mx-4 project-1-para d-flex">
+			<div class="col-sm-4 my-2 text-center">
+				<a href="/images/pendrawings1.png" data-toggle="lightbox" data-gallery="example-gallery">
+					<img src="/images/pendrawings1.png" class="img-fluid">
 				</a>
-				</div>
 			</div>
-			<div class="col-sm-6 px-1 py-1">
-				<img src="images/Frame 9.png" class="w-100 img-fluid" alt="Responsive image">
+			<div class="col-sm-4 my-2 text-center">
+				<a href="/images/pendrawings2.png" data-toggle="lightbox" data-gallery="example-gallery">
+					<img src="/images/pendrawings2.png" class="img-fluid">
+				</a>
+			</div>
+			<div class="col-sm-4 my-2 text-center">
+				<a href="/images/pendrawing3.png" data-toggle="lightbox" data-gallery="example-gallery">
+					<img src="/images/pendrawing3.png" class="img-fluid">
+				</a>
 			</div>
 		</div>
-	  </div>
-	  <div class="container my-5 portfolio-1 reveal" style="background-color: #29489b;">
-		<div class="row">
-			<div class="col-sm-6 px-5 py-5">
-				<h2 class="text-left pt-5" style="font-weight: bold; color: #fdfffc;">
-					FitShare
-				</h2>
-				<p style="font-weight: 350; font-size: 21px; font-style: italic; color: #fdfffc;">
-					For adults who want to promote household wellbeing, FitShare is an interactive fitness hub that offers visualisation of household members' health metrics and recommends personalised activities.
-				</p>
-				<!-- <span class="badge px-2 py-2 my-2 read-time">Read time: 10 mins</span>  -->
-				<span class="badge px-2 py-2 my-2 mx-2 read-time">Platform: Monitor</span>
-				<div>
-					<a href="fitshare.html" target="_blank" class=" my-3 py-2 btn btn-primary button-portfolio">
-					View Project
-				</a>
-				</div>
-			</div>
-			<div class="col-sm-6 px-1 py-1">
-				<img src="images/Mac Studio.png" class="w-100 img-fluid" alt="Responsive image">
-			</div>
 		</div>
-	  </div>
-	  <div class="container my-5 portfolio-1 reveal" style="background-color:#ffba08;">
-		<div class="row">
-			<div class="col-sm-6 px-5 py-5">
-				<h2 class="text-left pt-5" style="font-weight: bold; color: black;">
-					RelicRhymes
-				</h2>
-				<p style="font-weight: 350; font-size: 21px; font-style: italic; color: black;">
-					RelicRhymes is a collaborative system designed for the University of Nottingham’s Archaeology Museum. It invites the visitors to collectively craft Haikus which are inspired by the artefacts displayed in the museum.
-				</p>
-				<!-- <span class="badge px-2 py-2 my-2 read-time">Read time: 10 mins</span>  -->
-				<span class="badge px-2 py-2 my-2 mx-2 read-time">Platform: Monitor</span>
-				<div>
-					<a href="relicrhymes.html" target="_blank" class="my-3 py-2 btn btn-primary button-portfolio">
-					View Project
-				</a>
-				</div>
-			</div>
-			<div class="col-sm-6 px-3 py-3">
-				<img src="images/Official-Color.png" class="w-100 img-fluid" alt="Responsive image">
-			</div>
-		</div>
-	  </div>
-	  <!-- <div class="container my-5 portfolio-1 reveal" style="background-color: #59341d;">
-		<div class="row">
-			<div class="col-sm-6 px-5 py-5">
-				<h2 class="text-left pt-5" style="font-weight: bold; color: #fdfffc;">
-					Piano Stairs
-				</h2>
-				<p style="font-weight: 350; color: #343a40; font-size: 21px; font-style: italic; color: #fdfffc;">
-					SenseHarmony is a mobile application designed to monitor and help regulate sensory perception in adults through personalised sensory diets. The project focuses on addressing the gap in research surrounding sensory regulation in the general adult population.
-				</p>
-				<span class="badge px-2 py-2 my-2 mx-2 read-time">Platform: Mobile</span>
-				<div>
-					<a href="#" class="my-3 py-2 btn btn-primary button-portfolio">
-					View Project
-				</a>
-				</div>
-			</div>
-			<div class="col-sm-6 px-1 py-1">
-				<img src="images/Rectangle 5894.png" class="img-fluid w-100 h-100" alt="Responsive image">
-			</div>
-		</div>
-	  </div> -->
-	</section>
+</section>
 	  <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 	  <script>
 		var typed = new Typed(".auto-type", {
@@ -219,6 +134,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 	<script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	<!-- Remove the container if you want to extend the Footer to full width. -->
 	<script src="https://cdn.jsdelivr.net/npm/bs5-lightbox@1.8.3/dist/index.bundle.min.js"></script>
 
