--- a/other-works-watercolour-paintings.html
+++ b/other-works-watercolour-paintings.html
@@ -16,9 +16,10 @@
 	<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 
     <title>Radhika Joglekar - UX Designer</title>
+	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand ml-3" href="/">Logo</a>
+		<a class="navbar-brand ml-3" href="/"><img src="images/Logo.png" class="img-fluid hero-image" alt="Responsive image"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
 		</button>
@@ -29,7 +30,7 @@
 				<a class="nav-link" href="/#portfolio-section">Portfolio<span class="sr-only"></span></a>
 			  </li>
 			<li class="nav-item active px-2">
-				<a class="nav-link" href="#">Other Works <span class="sr-only"></span></a>
+				<a class="nav-link" href="other-works.html">Other Works <span class="sr-only"></span></a>
 			</li>
 			<li class="nav-item active px-2">
 				<a class="nav-link" href="assets/Radhika_Joglekar_UX_Design.pdf" download>Resume<span class="sr-only"></span></a>
