--- a/other-works.html
+++ b/other-works.html
@@ -16,9 +16,10 @@
 	<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 
     <title>Radhika Joglekar - UX Designer</title>
+	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand ml-3" href="/">Logo</a>
+		<a class="navbar-brand ml-3" href="/"><img src="images/Logo.png" class="img-fluid hero-image" alt="Responsive image"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
 		</button>
@@ -82,7 +83,7 @@
 				</div>
 				<div class="row project-1-para gx-3">
 					<div class="col-sm-6 text-center" style="border:5px solid white; border-radius: 10px;">
-						<a href="" style="text-decoration: none;">
+						<a href="other-works-digital-art.html" style="text-decoration: none;">
 						<div  class="other-works-box h-100 d-flex align-items-center" style="background: linear-gradient(126deg, rgba(164,180,4,1) 0%, rgba(191,210,0,1) 100%); padding: 8rem; border-radius: 10px; box-shadow:6px 6px 18px 0px rgba(0, 0, 0, 0.117)">
 							<span style="font-size: 35px; font-weight: 800; color: #403d39;"> Digital Art </span>
 						</div>
@@ -98,7 +99,7 @@
 				</div>
 			</div>
 			<div class="col-sm-4 text-center" style="border:5px solid white; border-radius: 10px;">
-				<a href="" style="text-decoration: none;">
+				<a href="other-works-pen-drawings.html" style="text-decoration: none;">
 				<div class="other-works-box h-100 d-flex align-items-center" style="background: linear-gradient(126deg, rgba(70,162,143,1) 0%, rgba(92,212,187,1) 100%); padding: 8rem; border-radius: 10px; box-shadow:6px 6px 18px 0px rgba(0, 0, 0, 0.117)">
 					<span style="font-size: 35px; font-weight: 800; color: #403d39;"> Pen Drawings </span>
 				</div>
