--- a/relicrhymes.html
+++ b/relicrhymes.html
@@ -15,8 +15,10 @@
 			href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
 			rel="stylesheet">
 		<title>Radhika Joglekar - UX Designer</title>
+		<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<a class="navbar-brand ml-3" href="/">Logo</a>
+			<a class="navbar-brand ml-3" href="/"><img src="images/Logo.png" class="img-fluid hero-image" alt="Responsive image"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
 				aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -389,7 +391,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="underline my-5 container-fluid reveal" style="font-weight: bold; background-color: whitesmoke;">
+				<div class="underline my-0 container-fluid reveal" style="font-weight: bold; background-color: whitesmoke;">
 					<div class="row px-4 mx-4 py-4 project-1-para">
 						<div class="underline col-sm-7 my-3 py-5 text-left">
 							<span class="text-left"
@@ -406,6 +408,21 @@
 						<div class="underline col-sm-5 d-flex align-items-center my-3 text-center">
 							<img src="images/relicrhymesconclusion.svg" class="project-image w-75 img-fluid"
 								alt="Responsive image">
+						</div>
+					</div>
+				</div>
+				<div class="underline container-fluid" style="font-weight: bold;">
+					<div class="row px-4 mx-4 project-1-para">
+						<div class="col-sm-12 my-5 py-2 hero-text text-center">
+							<button class="view-next-project">
+								<a href="senseharmony.html">
+									<h4 style="font-size: 25px; font-weight: 500; color: white;" class="pb-0 mb-0">
+										View Next Project <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-right" stroke="white" stroke-width="1" viewBox="0 0 16 16">
+											<path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"/>
+										  </svg>
+									</h4>
+								</a>
+							</button>
 						</div>
 					</div>
 				</div>
