--- a/senseharmony.html
+++ b/senseharmony.html
@@ -15,8 +15,10 @@
 			href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
 			rel="stylesheet">
 		<title>Radhika Joglekar - UX Designer</title>
+		<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<a class="navbar-brand ml-3" href="/">Logo</a>
+			<a class="navbar-brand ml-3" href="/"><img src="images/Logo.png" class="img-fluid hero-image" alt="Responsive image"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
 				aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -492,6 +494,21 @@
 						</h5>
 
 						<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="600" src="https://embed.figma.com/proto/PjPeA9Nj316ihdkwJiuyG8/SenseHarmony?page-id=0%3A1&node-id=579-160&node-type=frame&viewport=98%2C-800%2C0.1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=579%3A160&embed-host=share" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
+			<div class="underline container-fluid reveal" style="font-weight: bold; background-color: whitesmoke;">
+				<div class="row px-4 mx-4 project-1-para">
+					<div class="col-sm-12 my-5 py-2 hero-text text-center">
+						<button class="view-next-project">
+							<a href="fitshare.html">
+								<h4 style="font-size: 25px; font-weight: 500; color: white;" class="pb-0 mb-0">
+									View Next Project <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-right" stroke="white" stroke-width="1" viewBox="0 0 16 16">
+										<path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"/>
+									  </svg>
+								</h4>
+							</a>
+						</button>
 					</div>
 				</div>
 			</div>
