Update other-works.html page
Fixed the padding issue on mobile.

--- a/other-works.html
+++ b/other-works.html
@@ -54,7 +54,7 @@
 		<div class="col-sm-12 my-5 pl-5 hero-text">
 			<span style="font-size: 40px;">Other Works</span>
 			<p class="hero-subtext"
-				style="font-weight: 350; font-size: 21px; font-style: italic; color: white;">These are some of my artworks across various mediums. From the traditional strokes of paint to the precision of digital art, each piece reflects a different facet of my creative process. Whether it’s the texture of a canvas or the fine lines of pen drawings, this page offers a glimpse into the diverse visual styles I’ve developed over time.
+				style="font-weight: 350; font-size: 21px; font-style: italic; color: white;">These are some of my artworks across various mediums. From the traditional strokes of paint to the precision of digital art, each piece reflects a different facet of my creative process.
 			</p>
 		</div>
 	</div>
@@ -112,39 +112,39 @@
 	<!-- Mobile and Tablet view -->
 	<div class="bento-box-mobile container-fluid my-5 underline" style="font-weight: bold;">
 		<div class="row px-4 mx-4 project-1-para">
-			<div class="col-sm-12 text-center">
-				<div class="row project-1-para">
-					<div class="col-sm-12 text-center" style="border:5px solid white; border-radius: 10px;">
-						<a href="" style="text-decoration: none;">
-						<div class="other-works-box" style="background: linear-gradient(126deg, rgba(237,182,0,1) 0%, rgba(255,196,0,1) 100%); padding: 8rem; border-radius: 10px; box-shadow:6px 6px 18px 0px rgba(0, 0, 0, 0.117);">
-							<span style="font-size: 35px; font-weight: 800; color: #403d39;">Watercolour Paintings</span>
-						</div>
-					</a>
+			<div class="col-sm-12 text-center" style="border:5px solid white; border-radius: 10px;">
+				<a class="text-center" href="" style="text-decoration: none;">
+					<div class="other-works-box"
+						style="background: linear-gradient(126deg, rgba(237,182,0,1) 0%, rgba(255,196,0,1) 100%); padding: 8rem 0 8rem 0; border-radius: 10px; box-shadow:6px 6px 18px 0px rgba(0, 0, 0, 0.117);">
+						<h4 class="text-center" style="font-size: 35px; font-weight: 800; color: #403d39;">
+							Watercolour Paintings
+						</h4>
 					</div>
-				</div>
-				<div class="row project-1-para gx-3">
-					<div class="col-sm-12 text-center" style="border:5px solid white; border-radius: 10px;">
-						<a href="" style="text-decoration: none;">
-						<div  class="other-works-box h-100 text-center" style="background: linear-gradient(126deg, rgba(164,180,4,1) 0%, rgba(191,210,0,1) 100%); padding: 8rem; border-radius: 10px; box-shadow:6px 6px 18px 0px rgba(0, 0, 0, 0.117)">
-							<span style="font-size: 35px; font-weight: 800; color: #403d39;"> Digital Art </span>
-						</div>
-					</a>
-					</div>
-					<div class="col-sm-12 text-center" style="border:5px solid white; border-radius: 10px;">
-						<a href="" style="text-decoration: none;">
-						<div class="other-works-box h-100 text-center" style="background: linear-gradient(126deg, rgba(234,197,159,1) 0%, rgba(255,213,170,1) 100%); padding: 8rem; border-radius: 10px; box-shadow:6px 6px 18px 0px rgba(0, 0, 0, 0.117)">
-							<span style="font-size: 35px; font-weight: 800; color: #403d39;"> Sketches </span>
-						</div>
-					</a>
-					</div>
-				</div>
+				</a>
 			</div>
 			<div class="col-sm-12 text-center" style="border:5px solid white; border-radius: 10px;">
 				<a href="" style="text-decoration: none;">
-				<div class="other-works-box h-100 text-center" style="background: linear-gradient(126deg, rgba(70,162,143,1) 0%, rgba(92,212,187,1) 100%); padding: 8rem; border-radius: 10px; box-shadow:6px 6px 18px 0px rgba(0, 0, 0, 0.117)">
-					<span style="font-size: 35px; font-weight: 800; color: #403d39;"> Pen Drawings </span>
-				</div>
-			</a>
+					<div class="other-works-box h-100 text-center"
+						style="background: linear-gradient(126deg, rgba(164,180,4,1) 0%, rgba(191,210,0,1) 100%); padding: 8rem 0 8rem 0; border-radius: 10px; box-shadow:6px 6px 18px 0px rgba(0, 0, 0, 0.117)">
+						<span style="font-size: 35px; font-weight: 800; color: #403d39;"> Digital Art </span>
+					</div>
+				</a>
+			</div>
+			<div class="col-sm-12 text-center" style="border:5px solid white; border-radius: 10px;">
+				<a href="" style="text-decoration: none;">
+					<div class="other-works-box h-100 text-center"
+						style="background: linear-gradient(126deg, rgba(234,197,159,1) 0%, rgba(255,213,170,1) 100%); padding: 8rem 0 8rem 0; border-radius: 10px; box-shadow:6px 6px 18px 0px rgba(0, 0, 0, 0.117)">
+						<span style="font-size: 35px; font-weight: 800; color: #403d39;"> Sketches </span>
+					</div>
+				</a>
+			</div>
+			<div class="col-sm-12 text-center" style="border:5px solid white; border-radius: 10px;">
+				<a href="" style="text-decoration: none;">
+					<div class="other-works-box h-100 text-center"
+						style="background: linear-gradient(126deg, rgba(70,162,143,1) 0%, rgba(92,212,187,1) 100%); padding: 8rem 0 8rem 0; border-radius: 10px; box-shadow:6px 6px 18px 0px rgba(0, 0, 0, 0.117)">
+						<span style="font-size: 35px; font-weight: 800; color: #403d39;"> Pen Drawings </span>
+					</div>
+				</a>
 			</div>
 		</div>
 	</div>
