--- a/other-works.html
+++ b/other-works.html
@@ -113,7 +113,7 @@
 	<div class="bento-box-mobile container-fluid my-5 underline" style="font-weight: bold;">
 		<div class="row px-4 mx-4 project-1-para">
 			<div class="col-sm-12 text-center" style="border:5px solid white; border-radius: 10px;">
-				<a class="text-center" href="" style="text-decoration: none;">
+				<a class="text-center" href="other-works-watercolour-paintings.html" style="text-decoration: none;">
 					<div class="other-works-box"
 						style="background: linear-gradient(126deg, rgba(237,182,0,1) 0%, rgba(255,196,0,1) 100%); padding: 8rem 0 8rem 0; border-radius: 10px; box-shadow:6px 6px 18px 0px rgba(0, 0, 0, 0.117);">
 						<h4 class="text-center" style="font-size: 35px; font-weight: 800; color: #403d39;">
@@ -123,7 +123,7 @@
 				</a>
 			</div>
 			<div class="col-sm-12 text-center" style="border:5px solid white; border-radius: 10px;">
-				<a href="" style="text-decoration: none;">
+				<a href="other-works-digital-art.html" style="text-decoration: none;">
 					<div class="other-works-box h-100 text-center"
 						style="background: linear-gradient(126deg, rgba(164,180,4,1) 0%, rgba(191,210,0,1) 100%); padding: 8rem 0 8rem 0; border-radius: 10px; box-shadow:6px 6px 18px 0px rgba(0, 0, 0, 0.117)">
 						<span style="font-size: 35px; font-weight: 800; color: #403d39;"> Digital Art </span>
@@ -131,7 +131,7 @@
 				</a>
 			</div>
 			<div class="col-sm-12 text-center" style="border:5px solid white; border-radius: 10px;">
-				<a href="" style="text-decoration: none;">
+				<a href="other-works-sketches.html" style="text-decoration: none;">
 					<div class="other-works-box h-100 text-center"
 						style="background: linear-gradient(126deg, rgba(234,197,159,1) 0%, rgba(255,213,170,1) 100%); padding: 8rem 0 8rem 0; border-radius: 10px; box-shadow:6px 6px 18px 0px rgba(0, 0, 0, 0.117)">
 						<span style="font-size: 35px; font-weight: 800; color: #403d39;"> Sketches </span>
@@ -139,7 +139,7 @@
 				</a>
 			</div>
 			<div class="col-sm-12 text-center" style="border:5px solid white; border-radius: 10px;">
-				<a href="" style="text-decoration: none;">
+				<a href="other-works-pen-drawings.html" style="text-decoration: none;">
 					<div class="other-works-box h-100 text-center"
 						style="background: linear-gradient(126deg, rgba(70,162,143,1) 0%, rgba(92,212,187,1) 100%); padding: 8rem 0 8rem 0; border-radius: 10px; box-shadow:6px 6px 18px 0px rgba(0, 0, 0, 0.117)">
 						<span style="font-size: 35px; font-weight: 800; color: #403d39;"> Pen Drawings </span>
