Updated all pages
Added links to the pages and changed colours.

--- a/my-art-watercolour-paintings.html
+++ b/my-art-watercolour-paintings.html
@@ -19,7 +19,7 @@
 	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand ml-3" href="/"><img src="images/Logo.png" class="img-fluid hero-image" alt="Responsive image"></a>
+		<a class="navbar-brand ml-3" href="/"><img src="images/Logo.png" class="img-fluid" alt="Responsive image"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
 		</button>
@@ -30,13 +30,13 @@
 				<a class="nav-link" href="/#portfolio-section">Portfolio<span class="sr-only"></span></a>
 			  </li>
 			<li class="nav-item active px-2">
-				<a class="nav-link" href="other-works.html">Other Works <span class="sr-only"></span></a>
+				<a class="nav-link" href="/my-art.html">My Art<span class="sr-only"></span></a>
 			</li>
 			<li class="nav-item active px-2">
 				<a class="nav-link" href="assets/Radhika_Joglekar_UX_Design.pdf" download>Resume<span class="sr-only"></span></a>
 			  </li>
 			<li class="nav-item active px-2">
-			<a class="nav-link" href="mailto:radhikajoglekar1231@gmail.com" target="_blank">Contact Me<span class="sr-only"></span></a>
+				<a class="nav-link" href="mailto:radhikajoglekar1231@gmail.com" target="_blank">Work with me<span class="sr-only"></span></a>
 			</li>
 		  </ul>
 		</div>
@@ -48,11 +48,11 @@
 		<path fill-rule="evenodd" d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5" stroke="black" stroke-width="1"/>
 	  </svg></button>
 	<!-- Back to top button -->
-	<div class="container-fluid underline" style="font-weight: bold;">
+	<div class="container-fluid underline reveal" style="font-weight: bold;">
 		<div class="row">
 			<div class="col-sm-12 my-5 hero-text text-center">
-				<span style="font-size: 35px; font-weight: 800; color: #403d39;">Pen Drawings
-					<hr class="mt-2"  style="width: 10%; border-top: 4px solid #80b918; border-radius: 20px; height:0; opacity: 100; margin: auto;">
+				<span style="font-size: 35px; font-weight: 800; color: #403d39;">Watercolour Paintings
+					<hr class="mt-2"  style="width: 10%; border-top: 4px solid #aa4465; border-radius: 20px; height:0; opacity: 100; margin: auto;">
 				</span>
 			</div>
 		</div>
@@ -60,22 +60,60 @@
 	<div class="container-fluid my-2 underline" style="font-weight: bold;">
 		<div class="row px-4 mx-4 project-1-para d-flex">
 			<div class="col-sm-4 my-2 text-center">
-				<a href="/images/pendrawings1.png" data-toggle="lightbox" data-gallery="example-gallery">
-					<img src="/images/pendrawings1.png" class="img-fluid">
+				<a href="/images/watercolour1.png" data-toggle="lightbox" data-gallery="example-gallery">
+					<img src="/images/watercolour1.png" class="img-fluid">
 				</a>
 			</div>
 			<div class="col-sm-4 my-2 text-center">
-				<a href="/images/pendrawings2.png" data-toggle="lightbox" data-gallery="example-gallery">
-					<img src="/images/pendrawings2.png" class="img-fluid">
+				<a href="/images/watercolour2.png" data-toggle="lightbox" data-gallery="example-gallery">
+					<img src="/images/watercolour2.png" class="img-fluid">
 				</a>
 			</div>
 			<div class="col-sm-4 my-2 text-center">
-				<a href="/images/pendrawing3.png" data-toggle="lightbox" data-gallery="example-gallery">
-					<img src="/images/pendrawing3.png" class="img-fluid">
+				<a href="/images/watercolour3.png" data-toggle="lightbox" data-gallery="example-gallery">
+					<img src="/images/watercolour3.png" class="img-fluid">
 				</a>
 			</div>
 		</div>
 		</div>
+		<div class="container-fluid my-2 underline" style="font-weight: bold;">
+		<div class="row px-4 mx-4 project-1-para">
+			<div class="col-sm-4 my-2 text-center">
+				<a href="/images/watercolour4.png" data-toggle="lightbox" data-gallery="example-gallery">
+					<img src="/images/watercolour4.png" class="img-fluid">
+				</a>
+			</div>
+			<div class="col-sm-4 my-2 text-center">
+				<a href="/images/watercolour5.png" data-toggle="lightbox" data-gallery="example-gallery">
+					<img src="/images/watercolour5.png" class="img-fluid">
+				</a>
+			</div>
+			<div class="col-sm-4 my-2 text-center">
+				<a href="/images/watercolour6.png" data-toggle="lightbox" data-gallery="example-gallery">
+					<img src="/images/watercolour6.png" class="img-fluid">
+				</a>
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid my-2 underline" style="font-weight: bold;">
+		<div class="row px-4 mx-4 project-1-para">
+			<div class="col-sm-4 my-2 text-center">
+				<a href="/images/watercolour7.png" data-toggle="lightbox" data-gallery="example-gallery">
+					<img src="/images/watercolour7.png" class="img-fluid">
+				</a>
+			</div>
+			<div class="col-sm-4 my-2 text-center">
+				<a href="/images/watercolour8.png" data-toggle="lightbox" data-gallery="example-gallery">
+					<img src="/images/watercolour8.png" class="img-fluid">
+				</a>
+			</div>
+			<div class="col-sm-4 my-2 text-center">
+				<a href="/images/watercolour9.png" data-toggle="lightbox" data-gallery="example-gallery">
+					<img src="/images/watercolour9.png" class="img-fluid">
+				</a>
+			</div>
+		</div>
+	</div>
 </section>
 	  <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 	  <script>
