--- a/fitshare.html
+++ b/fitshare.html
@@ -18,7 +18,7 @@
 		<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<a class="navbar-brand ml-3" href="/"><img src="images/Logo.png" class="img-fluid hero-image" alt="Responsive image"></a>
+			<a class="navbar-brand ml-3" href="/"><img src="images/Logo.png" class="img-fluid" alt="Responsive image"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
 				aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -29,14 +29,14 @@
 						<a class="nav-link" href="/#portfolio-section">Portfolio<span class="sr-only"></span></a>
 					</li>
 					<li class="nav-item active px-2">
-						<a class="nav-link" href="/other-works.html">Other Works <span class="sr-only"></span></a>
+						<a class="nav-link" href="/my-art.html">My Art<span class="sr-only"></span></a>
 					</li>
 					<li class="nav-item active px-2">
 						<a class="nav-link" href="assets/Radhika_Joglekar_UX_Design.pdf" download>Resume<span
 								class="sr-only"></span></a>
 					</li>
 					<li class="nav-item active px-2">
-						<a class="nav-link" href="mailto:radhikajoglekar1231@gmail.com" target="_blank">Contact Me<span class="sr-only"></span></a>
+						<a class="nav-link" href="mailto:radhikajoglekar1231@gmail.com" target="_blank">Work with me<span class="sr-only"></span></a>
 					</li>
 				</ul>
 			</div>
