--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 
-    <title>Radhika Joglekar - UX Designer</title>
+    <title>Radhika Joglekar - Designer | Researcher | Artist</title>
 	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand ml-3" href="/"><img src="images/Logo.png" class="img-fluid hero-image" alt="Responsive image"></a>
+		<a class="navbar-brand ml-3" href="/"><img src="images/Logo.png" class="img-fluid" alt="Responsive image"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
 		</button>
@@ -27,13 +27,13 @@
 				<a class="nav-link" href="/#portfolio-section">Portfolio<span class="sr-only"></span></a>
 			  </li>
 			<li class="nav-item active px-2">
-				<a class="nav-link" href="/other-works.html">Other Works <span class="sr-only"></span></a>
+				<a class="nav-link" href="/my-art.html">My Art<span class="sr-only"></span></a>
 			</li>
 			<li class="nav-item active px-2">
 				<a class="nav-link" href="assets/Radhika_Joglekar_UX_Design.pdf" download>Resume<span class="sr-only"></span></a>
 			  </li>
 			<li class="nav-item active px-2">
-			<a class="nav-link" href="mailto:radhikajoglekar1231@gmail.com" target="_blank">Contact Me<span class="sr-only"></span></a>
+			<a class="nav-link" href="mailto:radhikajoglekar1231@gmail.com" target="_blank">Work with me<span class="sr-only"></span></a>
 			</li>
 		  </ul>
 		</div>
@@ -56,7 +56,7 @@
 						I blend creative problem-solving with user-centred design to craft intuitive digital experiences.
 				</p>
 				<a href="mailto:radhikajoglekar1231@gmail.com" class="btn btn-primary btn-arrow button">
-					Contact Me
+					Work with me
 				</a>
 			</div>
 			<div class="col-sm-4 text-left">
@@ -86,7 +86,7 @@
 				<!-- <span class="badge px-2 py-2 my-2 read-time">Read time: 10 mins</span>  -->
 				<span class="badge px-2 py-2 my-2 mx-2 read-time">Platform: Mobile</span>
 				<div>
-					<a href="senseharmony.html" target="_blank" class="my-3 py-2 btn btn-primary button-portfolio">
+					<a href="senseharmony.html" class="my-3 py-2 btn btn-primary button-portfolio">
 					View Project
 				</a>
 				</div>
@@ -106,9 +106,9 @@
 					For adults who want to promote household wellbeing, FitShare is an interactive fitness hub that offers visualisation of household members' health metrics and recommends personalised activities.
 				</p>
 				<!-- <span class="badge px-2 py-2 my-2 read-time">Read time: 10 mins</span>  -->
-				<span class="badge px-2 py-2 my-2 mx-2 read-time">Platform: Monitor</span>
+				<span class="badge px-2 py-2 my-2 mx-2 read-time">Platform: Desktop</span>
 				<div>
-					<a href="fitshare.html" target="_blank" class=" my-3 py-2 btn btn-primary button-portfolio">
+					<a href="fitshare.html" class=" my-3 py-2 btn btn-primary button-portfolio">
 					View Project
 				</a>
 				</div>
@@ -128,9 +128,9 @@
 					RelicRhymes is a collaborative system designed for the University of Nottingham’s Archaeology Museum. It invites the visitors to collectively craft Haikus which are inspired by the artefacts displayed in the museum.
 				</p>
 				<!-- <span class="badge px-2 py-2 my-2 read-time">Read time: 10 mins</span>  -->
-				<span class="badge px-2 py-2 my-2 mx-2 read-time">Platform: Monitor</span>
+				<span class="badge px-2 py-2 my-2 mx-2 read-time">Platform: iPad</span>
 				<div>
-					<a href="relicrhymes.html" target="_blank" class="my-3 py-2 btn btn-primary button-portfolio">
+					<a href="relicrhymes.html" class="my-3 py-2 btn btn-primary button-portfolio">
 					View Project
 				</a>
 				</div>
@@ -165,7 +165,7 @@
 	  <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 	  <script>
 		var typed = new Typed(".auto-type", {
-			strings : ["an Interaction Designer.","a UX Researcher.", "a UI Developer.", "an Artist.", "a Cooking Enthusiast."],
+			strings : ["an Interaction Designer.","a UX Researcher.", "an Artist.", "a Cooking Enthusiast."],
 			typeSpeed: 60,
 			backSpeed: 60,
 			loop: true,
