--- a/my-art-sketches.html
+++ b/my-art-sketches.html
@@ -19,7 +19,7 @@
 	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand ml-3" href="/"><img src="images/Logo.png" class="img-fluid hero-image" alt="Responsive image"></a>
+		<a class="navbar-brand ml-3" href="/"><img src="images/Logo.png" class="img-fluid" alt="Responsive image"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
 		</button>
@@ -30,13 +30,13 @@
 				<a class="nav-link" href="/#portfolio-section">Portfolio<span class="sr-only"></span></a>
 			  </li>
 			<li class="nav-item active px-2">
-				<a class="nav-link" href="other-works.html">Other Works <span class="sr-only"></span></a>
+				<a class="nav-link" href="/my-art.html">My Art<span class="sr-only"></span></a>
 			</li>
 			<li class="nav-item active px-2">
 				<a class="nav-link" href="assets/Radhika_Joglekar_UX_Design.pdf" download>Resume<span class="sr-only"></span></a>
 			  </li>
 			<li class="nav-item active px-2">
-			<a class="nav-link" href="mailto:radhikajoglekar1231@gmail.com" target="_blank">Contact Me<span class="sr-only"></span></a>
+				<a class="nav-link" href="mailto:radhikajoglekar1231@gmail.com" target="_blank">Work with me<span class="sr-only"></span></a>
 			</li>
 		  </ul>
 		</div>
@@ -51,54 +51,40 @@
 	<div class="container-fluid underline" style="font-weight: bold;">
 		<div class="row">
 			<div class="col-sm-12 my-5 hero-text text-center">
-				<span style="font-size: 35px; font-weight: 800; color: #403d39;">Digital Art
-					<hr class="mt-2"  style="width: 10%; border-top: 4px solid #80b918; border-radius: 20px; height:0; opacity: 100; margin: auto;">
+				<span style="font-size: 35px; font-weight: 800; color: #403d39;">Sketches
+					<hr class="mt-2"  style="width: 10%; border-top: 4px solid #aa4465; border-radius: 20px; height:0; opacity: 100; margin: auto;">
 				</span>
 			</div>
 		</div>
 	</div>
-	<!-- <div class="container-fluid my-2 underline" style="font-weight: bold;">
+	<div class="container-fluid my-2 underline" style="font-weight: bold;">
 		<div class="row px-4 mx-4 project-1-para d-flex">
 			<div class="col-sm-4 my-2 text-center">
-				<a href="/images/digitalart1.png" data-toggle="lightbox" data-gallery="example-gallery">
-					<img src="/images/digitalart1.png" class="img-fluid">
+				<a href="/images/sketches1.png" data-toggle="lightbox" data-gallery="example-gallery">
+					<img src="/images/sketches1.png" class="img-fluid">
 				</a>
 			</div>
 			<div class="col-sm-4 my-2 text-center">
-				<a href="/images/digitalart2.png" data-toggle="lightbox" data-gallery="example-gallery">
-					<img src="/images/digitalart2.png" class="img-fluid">
+				<a href="/images/sketches2.png" data-toggle="lightbox" data-gallery="example-gallery">
+					<img src="/images/sketches2.png" class="img-fluid">
 				</a>
 			</div>
 			<div class="col-sm-4 my-2 text-center">
-				<a href="/images/digitalart3.png" data-toggle="lightbox" data-gallery="example-gallery">
-					<img src="/images/digitalart3.png" class="img-fluid">
+				<a href="/images/sketches3.png" data-toggle="lightbox" data-gallery="example-gallery">
+					<img src="/images/sketches3.png" class="img-fluid">
 				</a>
 			</div>
 		</div>
 		</div>
 		<div class="container-fluid my-2 underline" style="font-weight: bold;">
-		<div class="row px-4 mx-4 project-1-para">
-			<div class="col-sm-4 my-2 text-center">
-				<a href="/images/digitalart4.png" data-toggle="lightbox" data-gallery="example-gallery">
-					<img src="/images/digitalart4.png" class="img-fluid">
-				</a>
+			<div class="row px-4 mx-4 project-1-para d-flex">
+				<div class="col-sm-4 my-2 text-center">
+					<a href="/images/sketches4.png" data-toggle="lightbox" data-gallery="example-gallery">
+						<img src="/images/sketches4.png" class="img-fluid">
+					</a>
+				</div>
 			</div>
-			<div class="col-sm-4 my-2 text-center">
-				<a href="/images/digitalart5.png" data-toggle="lightbox" data-gallery="example-gallery">
-					<img src="/images/digitalart5.png" class="img-fluid">
-				</a>
 			</div>
-		</div>
-	</div> -->
-	<div class="container-fluid my-2 underline" style="font-weight: bold;">
-		<div class="row px-4 mx-4 project-1-para d-flex">
-			<div class="col-sm-12 my-2 text-center">
-				<a href="/images/digitalart.png" data-toggle="lightbox" data-gallery="example-gallery">
-					<img src="/images/digitalart.png" class="img-fluid">
-				</a>
-			</div>
-		</div>
-	</div>
 </section>
 	  <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 	  <script>
