--- a/my-art.html
+++ b/my-art.html
@@ -19,7 +19,7 @@
 	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand ml-3" href="/"><img src="images/Logo.png" class="img-fluid hero-image" alt="Responsive image"></a>
+		<a class="navbar-brand ml-3" href="/"><img src="images/Logo.png" class="img-fluid" alt="Responsive image"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
 		</button>
@@ -27,16 +27,16 @@
 		<div class="collapse navbar-collapse circle" id="navbarTogglerDemo02">
 		  <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
 			<li class="nav-item active px-2">
-				<a class="nav-link" href="/#portfolio-section">Portfolio<span class="sr-only"></span></a>
+				<a class="nav-link" href="/#portfolio-section">Projects<span class="sr-only"></span></a>
 			  </li>
 			<li class="nav-item active px-2">
-				<a class="nav-link" href="/other-works.html">Other Works <span class="sr-only"></span></a>
+				<a class="nav-link" href="/my-art.html">My Art<span class="sr-only"></span></a>
 			</li>
 			<li class="nav-item active px-2">
 				<a class="nav-link" href="assets/Radhika_Joglekar_UX_Design.pdf" download>Resume<span class="sr-only"></span></a>
 			  </li>
 			<li class="nav-item active px-2">
-			<a class="nav-link" href="mailto:radhikajoglekar1231@gmail.com" target="_blank">Contact Me<span class="sr-only"></span></a>
+				<a class="nav-link" href="mailto:radhikajoglekar1231@gmail.com" target="_blank">Work with me<span class="sr-only"></span></a>
 			</li>
 		  </ul>
 		</div>
@@ -49,10 +49,10 @@
 	  </svg></button>
 	<!-- Back to top button -->
 	<div class="container-fluid project-1"
-	style="background-color: #80b918; font-weight: bold; color: white;">
+	style="background-color: #aa4465; font-weight: bold; color: white;">
 	<div class="row">
 		<div class="col-sm-12 my-5 pl-5 hero-text">
-			<span style="font-size: 40px;">Other Works</span>
+			<span style="font-size: 40px;">My Art</span>
 			<p class="hero-subtext"
 				style="font-weight: 350; font-size: 21px; font-style: italic; color: white;">These are some of my artworks across various mediums. From the traditional strokes of paint to the precision of digital art, each piece reflects a different facet of my creative process.
 			</p>
@@ -63,7 +63,7 @@
 		<div class="row">
 			<div class="col-sm-12 my-5 hero-text text-center">
 				<span style="font-size: 35px; font-weight: 800; color: #403d39;">Browse
-					<hr class="mt-2"  style="width: 10%; border-top: 4px solid #80b918; border-radius: 20px; height:0; opacity: 100; margin: auto;">
+					<hr class="mt-2"  style="width: 10%; border-top: 4px solid #aa4465; border-radius: 20px; height:0; opacity: 100; margin: auto;">
 				</span>
 			</div>
 		</div>
@@ -74,7 +74,7 @@
 			<div class="col-sm-8 text-center">
 				<div class="row project-1-para">
 					<div class="col-sm-12 text-center" style="border:5px solid white; border-radius: 10px;">
-						<a href="other-works-watercolour-paintings.html" style="text-decoration: none;">
+						<a href="my-art-watercolour-paintings.html" style="text-decoration: none;">
 						<div class="other-works-box" style="background: linear-gradient(126deg, rgba(237,182,0,1) 0%, rgba(255,196,0,1) 100%); padding: 8rem; border-radius: 10px; box-shadow:6px 6px 18px 0px rgba(0, 0, 0, 0.117);">
 							<span style="font-size: 35px; font-weight: 800; color: #403d39;">Watercolour Paintings</span>
 						</div>
@@ -83,14 +83,14 @@
 				</div>
 				<div class="row project-1-para gx-3">
 					<div class="col-sm-6 text-center" style="border:5px solid white; border-radius: 10px;">
-						<a href="other-works-digital-art.html" style="text-decoration: none;">
+						<a href="my-art-digital-art.html" style="text-decoration: none;">
 						<div  class="other-works-box h-100 d-flex align-items-center" style="background: linear-gradient(126deg, rgba(164,180,4,1) 0%, rgba(191,210,0,1) 100%); padding: 8rem; border-radius: 10px; box-shadow:6px 6px 18px 0px rgba(0, 0, 0, 0.117)">
 							<span style="font-size: 35px; font-weight: 800; color: #403d39;"> Digital Art </span>
 						</div>
 					</a>
 					</div>
 					<div class="col-sm-6 text-center" style="border:5px solid white; border-radius: 10px;">
-						<a href="" style="text-decoration: none;">
+						<a href="my-art-sketches.html" style="text-decoration: none;">
 						<div class="other-works-box h-100 d-flex align-items-center" style="background: linear-gradient(126deg, rgba(234,197,159,1) 0%, rgba(255,213,170,1) 100%); padding: 8rem; border-radius: 10px; box-shadow:6px 6px 18px 0px rgba(0, 0, 0, 0.117)">
 							<span style="font-size: 35px; font-weight: 800; color: #403d39;"> Sketches </span>
 						</div>
@@ -99,7 +99,7 @@
 				</div>
 			</div>
 			<div class="col-sm-4 text-center" style="border:5px solid white; border-radius: 10px;">
-				<a href="other-works-pen-drawings.html" style="text-decoration: none;">
+				<a href="my-art-pen-drawings.html" style="text-decoration: none;">
 				<div class="other-works-box h-100 d-flex align-items-center" style="background: linear-gradient(126deg, rgba(70,162,143,1) 0%, rgba(92,212,187,1) 100%); padding: 8rem; border-radius: 10px; box-shadow:6px 6px 18px 0px rgba(0, 0, 0, 0.117)">
 					<span style="font-size: 35px; font-weight: 800; color: #403d39;"> Pen Drawings </span>
 				</div>
