Updated all pages
Made button and text changes.

--- a/index.html
+++ b/index.html
@@ -57,12 +57,13 @@
 	<div class="container-fluid main-hero py-3">
 		<div class="row">
 			<div class="col-sm-8 my-5 pl-5 hero-text">
-				<span style="font-size: 40px;">Hi! I am Radhika,</span>
+				<span style="font-size: 40px;">Hi! 👋 I am Radhika,</span>
 				<h1 class="hero-h1">
 					I'm <span class="auto-type"></span>
 				</h1>
-				<p class="hero-subtext">
-						I blend creative problem-solving with user-centred design to craft intuitive digital experiences.
+				<p class="hero-subtext" style="font-style: normal;">
+					A UX designer, self-proclaimed problem solver, and professional overthinker (especially when it comes to wireframes 🤯). If you’re looking for digital experiences crafted with empathy and creativity, you’re in the right place.
+					Dive in and explore my work.
 				</p>
 				<a href="mailto:radhikajoglekar1231@gmail.com" class="btn btn-primary btn-arrow button">
 					Work with me
@@ -90,7 +91,7 @@
 					SenseHarmony
 				</h2>
 				<p style="font-weight: 350; font-size: 21px; font-style: italic; color: #fdfffc;">
-					SenseHarmony is a mobile application designed to monitor and help regulate sensory perception in adults through personalised sensory diets. The project focuses on addressing the gap in research surrounding sensory regulation in the general adult population.
+					Ever felt like sensory overload could use a pause button? Meet SenseHarmony, a mobile application designed to monitor and help regulate sensory perception in adults through personalised sensory diets.
 				</p>
 				<!-- <span class="badge px-2 py-2 my-2 read-time">Read time: 10 mins</span>  -->
 				<span class="badge px-2 py-2 my-2 mx-2 read-time">Platform: Mobile</span>
@@ -112,7 +113,7 @@
 					FitShare
 				</h2>
 				<p style="font-weight: 350; font-size: 21px; font-style: italic; color: #fdfffc;">
-					For adults who want to promote household wellbeing, FitShare is an interactive fitness hub that offers visualisation of household members' health metrics and recommends personalised activities.
+					For those who like their household’s well-being measured as much as their Netflix hours, FitShare is an interactive fitness hub that visualises health metrics and recommends personalised activities.
 				</p>
 				<!-- <span class="badge px-2 py-2 my-2 read-time">Read time: 10 mins</span>  -->
 				<span class="badge px-2 py-2 my-2 mx-2 read-time">Platform: Desktop</span>
@@ -134,7 +135,7 @@
 					RelicRhymes
 				</h2>
 				<p style="font-weight: 350; font-size: 21px; font-style: italic; color: black;">
-					RelicRhymes is a collaborative system designed for the University of Nottingham’s Archaeology Museum. It invites the visitors to collectively craft Haikus which are inspired by the artefacts displayed in the museum.
+					Because what’s an Archaeology Museum without a dash of poetic mystery? RelicRhymes is a collaborative system designed for the University of Nottingham’s Archaeology Museum. Here, visitors can craft Haikus inspired by the artefacts on display. Who knew history could rhyme?”
 				</p>
 				<!-- <span class="badge px-2 py-2 my-2 read-time">Read time: 10 mins</span>  -->
 				<span class="badge px-2 py-2 my-2 mx-2 read-time">Platform: iPad</span>
@@ -237,10 +238,12 @@
 		<a class="social-button instagram mx-2" href="https://www.instagram.com/joglekar_radhika/" target="_blank"><i class="fab fa-instagram"></i></a>
 		<a class="social-button instagram mx-2" href="https://www.behance.net/radhikajoglekar88" target="_blank"><i class="fab fa-behance"></i></a>
 	  </div>
+	  <hr style="border-color: #aa4465!important; width: 80%;">
 	  <!-- Copyright -->
-	  <div class="text-center text-white p-3">
+	  <div class="text-center text-white p-3" style="font-size: 18px; font-weight: 300;">
 			© 2024 Radhika Joglekar<br>
-			All Rights Reserved. | Designed & Developed by Radhika Joglekar | Powered by Creativity & Passion
+			Designed, developed, and probably over-thought by Radhika.
+			<br>Proudly powered by creativity, caffeine and Bootstrap....with occasional "Why isn't this working?" moments.
 	  </div>
 	  <!-- Copyright -->
 	</footer>
