--- a/my-art.html
+++ b/my-art.html
@@ -261,18 +261,20 @@
 	<script src="https://cdn.jsdelivr.net/npm/bs5-lightbox@1.8.3/dist/index.bundle.min.js"></script>
 
 	<footer class="text-center text-lg-start">
-	  <div class="container d-flex justify-content-center pt-5 rounded-social-buttons">
-		<a class="social-button linkedin mx-2" href="https://www.linkedin.com/in/radhika-joglekar/" target="_blank"><i class="fab fa-linkedin"></i></a>
-		<a class="social-button instagram mx-2" href="https://www.instagram.com/joglekar_radhika/" target="_blank"><i class="fab fa-instagram"></i></a>
-		<a class="social-button instagram mx-2" href="https://www.behance.net/radhikajoglekar88" target="_blank"><i class="fab fa-behance"></i></a>
-	  </div>
-	  <!-- Copyright -->
-	  <div class="text-center text-white p-3">
-			© 2024 Radhika Joglekar<br>
-			All Rights Reserved. | Designed & Developed by Radhika Joglekar | Powered by Creativity & Passion
-	  </div>
-	  <!-- Copyright -->
-	</footer>
+		<div class="container d-flex justify-content-center pt-5 rounded-social-buttons">
+		  <a class="social-button linkedin mx-2" href="https://www.linkedin.com/in/radhika-joglekar/" target="_blank"><i class="fab fa-linkedin"></i></a>
+		  <a class="social-button instagram mx-2" href="https://www.instagram.com/joglekar_radhika/" target="_blank"><i class="fab fa-instagram"></i></a>
+		  <a class="social-button instagram mx-2" href="https://www.behance.net/radhikajoglekar88" target="_blank"><i class="fab fa-behance"></i></a>
+		</div>
+		<hr style="border-color: #aa4465!important; width: 80%;">
+		<!-- Copyright -->
+		<div class="text-center text-white p-3" style="font-size: 18px; font-weight: 300;">
+			  © 2024 Radhika Joglekar<br>
+			  Designed, developed, and probably over-thought by Radhika.
+			  <br>Proudly powered by creativity, caffeine and Bootstrap....with occasional "Why isn't this working?" moments.
+		</div>
+		<!-- Copyright -->
+	  </footer>
   <!-- End of .container -->
   </body>
 </html>
