--- a/senseharmony.html
+++ b/senseharmony.html
@@ -508,13 +508,22 @@
 			</div>
 			<div class="underline container-fluid reveal" style="font-weight: bold; background-color: whitesmoke;">
 				<div class="row px-4 mx-4 project-1-para">
-					<div class="col-sm-12 my-5 py-2 hero-text text-center">
+					<div class="col-sm-6 my-5 py-2 hero-text text-center">
 						<button class="view-next-project">
 							<a href="fitshare.html">
-								<h4 style="font-size: 25px; font-weight: 500; color: white;" class="pb-0 mb-0">
+								<h4 style="font-size: 21px; font-weight: 500; color: white;" class="pb-0 mb-0">
 									View Next Project <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-right" stroke="white" stroke-width="1" viewBox="0 0 16 16">
 										<path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8"/>
 									  </svg>
+								</h4>
+							</a>
+						</button>
+					</div>
+					<div class="col-sm-6 my-5 py-2 hero-text text-center">
+						<button class="back-to-home">
+							<a href="/">
+								<h4 style="font-size: 21px; font-weight: 500; color: #aa4465;" class="pb-0 mb-0">
+									Nah I'm Officially Bored!
 								</h4>
 							</a>
 						</button>
@@ -583,18 +592,19 @@
 		<!-- Remove the container if you want to extend the Footer to full width. -->
 		<footer class="text-center text-lg-start">
 			<div class="container d-flex justify-content-center pt-5 rounded-social-buttons">
-				<a class="social-button linkedin mx-2" href="https://www.linkedin.com/in/radhika-joglekar/"
-					target="_blank"><i class="fab fa-linkedin"></i></a>
-				<a class="social-button instagram mx-2" href="https://www.instagram.com/joglekar_radhika/"
-					target="_blank"><i class="fab fa-instagram"></i></a>
-				<a class="social-button instagram mx-2" href="https://www.behance.net/radhikajoglekar88"
-					target="_blank"><i class="fab fa-behance"></i></a>
+			  <a class="social-button linkedin mx-2" href="https://www.linkedin.com/in/radhika-joglekar/" target="_blank"><i class="fab fa-linkedin"></i></a>
+			  <a class="social-button instagram mx-2" href="https://www.instagram.com/joglekar_radhika/" target="_blank"><i class="fab fa-instagram"></i></a>
+			  <a class="social-button instagram mx-2" href="https://www.behance.net/radhikajoglekar88" target="_blank"><i class="fab fa-behance"></i></a>
+			</div>
+			<hr style="border-color: #aa4465!important; width: 80%;">
+			<!-- Copyright -->
+			<div class="text-center text-white p-3" style="font-size: 18px; font-weight: 300;">
+				  © 2024 Radhika Joglekar<br>
+				  Designed, developed, and probably over-thought by Radhika.
+				  <br>Proudly powered by creativity, caffeine and Bootstrap....with occasional "Why isn't this working?" moments.
 			</div>
 			<!-- Copyright -->
-			<div class="text-center text-white p-3"> © 2024 Radhika Joglekar<br> All Rights Reserved. | Designed &
-				Developed by Radhika Joglekar | Powered by Creativity & Passion </div>
-			<!-- Copyright -->
-		</footer>
+		  </footer>
 		<!-- End of .container -->
 	</body>
 
